# AOS

./: .gitignore  CMakeLists.txt  README.md  setup.py
LFR/: .gitignore  README.md  setup.py
LFR/VS/: VS.vcxproj  VS.vcxproj.filters
LFR/include/: image.h
LFR/include/learnopengl/: shader.h
LFR/include/util/: window.h
LFR/pyaos/: lfr.cp38-win_amd64.pyd  pyaos.cpp  pyaos_test.py  setup_local.py
LFR/python/: pyaos_test.py  requirements.txt  setup_Win.py
LFR/shader/: deferred_project_image.fs.glsl  project_image.fs.glsl  show_fbo.fs.glsl
LFR/src/: AOS.cpp  AOSGenerator.cpp  image.cpp  main.cpp  py_utils.cpp  utils.cpp
VS/: VS.sln  VS.vcxproj  bad.list  imgui.ini
include/: AOS.h  AOSGenerator.h
include/util/: window.h
pyaos/: LFR_utils.py  Undistort.py  pyaos.pyx  pyaos_test.py  sample.py
shader/: deferred_project_image.fs.glsl  project_image.fs.glsl
src/: AOS.cpp  AOSGenerator.cpp  main.cpp  py_utils.cpp
